[package]
name = "solana-client-sdk"
version = "0.1.0"
edition = "2021"
description = "A Solana client SDK for BitVM Bridge"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fiamma-chain/solana-client-sdk"

[lib]
name = "solana_client_sdk"
path = "src/lib.rs"

[[example]]
name = "mint"
path = "examples/mint.rs"

[[example]]
name = "burn"
path = "examples/burn.rs"

[[example]]
name = "event_listener"
path = "examples/event_listener.rs"

[dependencies]
anchor-client = { version = "0.31.1", features = ["async"] }
bitvm-bridge = { package = "bitvm-bridge-contracts-solana", git = "https://github.com/fiamma-chain/bitvm-bridge-contracts-solana.git", branch = "main" }
btc-light-client = { package = "btc-light-client", git = "https://github.com/fiamma-chain/bitvm-bridge-contracts-solana.git", branch = "main" }
anchor-spl = { version = "0.31.1", features = ["metadata"] }
tokio = { version = "1.41.1", features = ["full"] }
solana-transaction-status = "2.2.7"
async-trait = "0.1"
base64 = "0.22.1"
dotenv = "0.15"
anyhow = "1.0"
bs58 = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4.3"
